Fixes layout problems maybe

--- a/styling/nb.css
+++ b/styling/nb.css
@@ -269,7 +269,7 @@ body {
 #bottom-button {
   color: var(--textcolor);
   left: 30%;
-  width: 40%;
+  width: round(40%, 2px);
   top: 50%;
   display: flex;
   align-items: center;
